fix layout shift on tab change

--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -68,6 +68,9 @@
 
   &.secondary {
     background-color: transparent;
+    // necessary to prevent layout shift when changing tabs
+    border-bottom: 2px solid transparent;
+
     &[data-active] {
       background-image: none;
       border-bottom: 2px solid var(--color-primary-200);
